--- a/MedicalAppointment.IOC/MedicalAppointment.IOC.csproj
+++ b/MedicalAppointment.IOC/MedicalAppointment.IOC.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedicalAppointment.Application\MedicalAppointment.Application.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.Consumption\MedicalAppointment.Consumption.csproj" />
   </ItemGroup>
 
 </Project>
